give name to export vcpkg cache variables cache

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -57,7 +57,8 @@ jobs:
       if: matrix.os != 'windows-2022'
 
     # Export vcpkg Cache Variables
-    - uses: actions/github-script@v6
+    - name : Export vcpkg Cache Variables
+      uses: actions/github-script@v6
       with:
         script: |
           core.exportVariable('ACTIONS_CACHE_URL', process.env.ACTIONS_CACHE_URL || '');
