--- a/Dockerfile_OdbDesignServer
+++ b/Dockerfile_OdbDesignServer
@@ -53,13 +53,14 @@ RUN mkdir --parents /OdbDesign/bin
 WORKDIR /OdbDesign/bin
 
 # copy binaries
-COPY --from=build /src/OdbDesign/out/build/linux-release/OdbDesignLib/libOdbDesign.so .
-COPY --from=build /src/OdbDesign/out/build/linux-release/Utils/libUtils.so .
+COPY --from=build /src/OdbDesign/out/build/linux-release/OdbDesignLib/*.so .
+COPY --from=build /src/OdbDesign/out/build/linux-release/Utils/*.so .
 COPY --from=build /src/OdbDesign/out/build/linux-release/OdbDesignServer/OdbDesignServer .
+COPY --from=build /src/OdbDesign/out/build/linux-release/OdbDesignServer/*.so .
 COPY --from=build /src/OdbDesign/out/build/linux-release/*.so .
 # copy designs and templates directories
-COPY --from=build /src/OdbDesign/OdbDesignServer/designs ./designs
-COPY --from=build /src/OdbDesign/OdbDesignServer/templates ./templates
+#COPY --from=build /src/OdbDesign/OdbDesignServer/designs ./designs
+#COPY --from=build /src/OdbDesign/OdbDesignServer/templates ./templates
 
 # run
 ENV LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/OdbDesign/bin
