--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -13,10 +13,9 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [ "development", main, release ]
+    branches: [ "development", "main", "release" ]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [ "development" ]
+    branches: [ "development", "main", "release" ]
 
 env:
   VCPKG_ROOT: ${{ github.workspace }}/vcpkg
