--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -12,9 +12,7 @@ on:
   push:
     branches: [ "development", "main", "release" ]
   pull_request:
-    branches: [ "development" ]
-  schedule:
-    - cron: '23 4 * * 6'
+    branches: [ "development", "main", "release" ]
 
 env:
   # Path to the CMake build directory.
