--- a/.github/workflows/msvc.yml
+++ b/.github/workflows/msvc.yml
@@ -53,7 +53,7 @@ jobs:
         run: "& \"${{env.VCPKG_ROOT}}/vcpkg\" install --triplet x64-windows"
         
       - name: CMake Configure      
-        run: cmake --preset x64-release -B ${{ env.build }}
+        run: cmake --preset x64-release -B ${{ env.build }} -G "Visual Studio 17 2022"
 
       # - name: Configure CMake
       #   run: cmake -B ${{ env.build }}
