--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -14,5 +14,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    
+    # add problem matchers
+    - name: Add Problem Matchers
+      uses: ammaraskar/gcc-problem-matcher@master
+
     - name: Build the Docker image
       run: docker build . --file Dockerfile_OdbDesignServer --tag odbdesign:${{github.ref_name}}-${{github.run_number}}
