--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -33,6 +33,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # add problem matchers
+      - name: Add Problem Matchers
+        uses: ammaraskar/gcc-problem-matcher@master
+
       # Install the cosign tool except on PR
       # https://github.com/sigstore/cosign-installer
       - name: Install cosign
