--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  #VCPKG_BINARY_SOURCES: 'clear;nuget,GitHub,readwrite'
 
 
 jobs:
@@ -85,7 +86,10 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
           file: Dockerfile_OdbDesignServer
-
+          build-args: 
+            OWNER=nam20485
+            GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
+            VCPKG_BINARY_SOURCES="clear;nuget,GitHub,readwrite"
 
       # Sign the resulting Docker image digest except on PRs.
       # This will only write to the public Rekor transparency log when the Docker
