run docker-publish workflow on pull requests as well as pushes

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -8,8 +8,8 @@ name: Docker Publish
 on:
   push:
     branches: [ "development", "main", "release" ]
-  #pull_request:
-  #  branches: [ "development", "main", "release" ]
+  pull_request:
+   branches: [ "development", "main", "release" ]
    
 env:
   # Use docker.io for Docker Hub if empty
