--- a/.github/codeql/codeql-config.yml
+++ b/.github/codeql/codeql-config.yml
@@ -3,7 +3,7 @@ name: Custom CodeQL Config
 paths:
   - /home/runner/work/OdbDesign/OdbDesign/**/*
 paths-ignore:
-  - /home/runner/work/OdbDesign/OdbDesign/vcpkg\_installed/**/*
+  - /home/runner/work/OdbDesign/OdbDesign/vcpkg_installed/**/*
 
 queries:
   - uses: security-and-quality
