--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -17,6 +17,8 @@ env:
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
   #VCPKG_BINARY_SOURCES: 'clear;nuget,GitHub,readwrite'
+  # Use `latest` as the tag to compare to if empty, assuming that it's already pushed
+  COMPARE_TAG: latest
 
 jobs:
   build:
@@ -38,13 +40,13 @@ jobs:
       - name: Add Problem Matchers
         uses: ammaraskar/gcc-problem-matcher@master
 
-      # Install the cosign tool except on PR
-      # https://github.com/sigstore/cosign-installer
-      - name: Install cosign
-        if: github.event_name != 'pull_request'
-        uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
-        with:
-          cosign-release: 'v1.13.1'
+    #   # Install the cosign tool except on PR
+    #   # https://github.com/sigstore/cosign-installer
+    #   - name: Install cosign
+    #     if: github.event_name != 'pull_request'
+    #     uses: sigstore/cosign-installer@f3c664df7af409cb4873aa5068053ba9d61a57b6 #v2.6.0
+    #     with:
+    #       cosign-release: 'v1.13.1'
 
       # Workaround: https://github.com/docker/build-push-action/issues/461
       - name: Setup Docker buildx
@@ -79,7 +81,8 @@ jobs:
         uses: docker/build-push-action@ac9327eae2b366085ac7f6a2d02df8aa8ead720a
         with:
           context: .          
-          push: ${{ github.event_name != 'pull_request' }}
+          push: false
+          # push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
@@ -90,18 +93,18 @@ jobs:
             GITHUB_TOKEN=${{ secrets.GITHUB_TOKEN }}
             VCPKG_BINARY_SOURCES=clear;nuget,GitHub,readwrite
 
-      # Sign the resulting Docker image digest except on PRs.
-      # This will only write to the public Rekor transparency log when the Docker
-      # repository is public to avoid leaking data.  If you would like to publish
-      # transparency data even for private images, pass --force to cosign below.
-      # https://github.com/sigstore/cosign
-      - name: Sign the published Docker image
-        if: ${{ github.event_name != 'pull_request' }}
-        env:
-          COSIGN_EXPERIMENTAL: "true"
-        # This step uses the identity token to provision an ephemeral certificate
-        # against the sigstore community Fulcio instance.
-        run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
+    #   # Sign the resulting Docker image digest except on PRs.
+    #   # This will only write to the public Rekor transparency log when the Docker
+    #   # repository is public to avoid leaking data.  If you would like to publish
+    #   # transparency data even for private images, pass --force to cosign below.
+    #   # https://github.com/sigstore/cosign
+    #   - name: Sign the published Docker image
+    #     if: ${{ github.event_name != 'pull_request' }}
+    #     env:
+    #       COSIGN_EXPERIMENTAL: "true"
+    #     # This step uses the identity token to provision an ephemeral certificate
+    #     # against the sigstore community Fulcio instance.
+    #     run: echo "${{ steps.meta.outputs.tags }}" | xargs -I {} cosign sign {}@${{ steps.build-and-push.outputs.digest }}
 
       - name: Analyze for critical and high CVEs
         id: docker-scout-cves
@@ -127,7 +130,7 @@ jobs:
         with:
           command: compare
           image: ${{ steps.meta.outputs.tags }}
-          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.COMPARE_TAG }}
+          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-${{ env.COMPARE_TAG }}
           ignore-unchanged: true
           only-severities: critical,high
           write-comment: true
