--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -52,17 +52,17 @@ jobs:
       - name: Setup Docker buildx
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
 
-      # Login against GHCR Docker registry except on PR
-      # https://github.com/docker/login-action
-      - name: Log into GHCR registry ${{ env.REGISTRY }}
-        if: github.event_name != 'pull_request'
-        uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
-        with:
-          registry: ${{ env.REGISTRY }}
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+      # # Login against GHCR Docker registry except on PR
+      # # https://github.com/docker/login-action
+      # - name: Log into GHCR registry ${{ env.REGISTRY }}
+      #   if: github.event_name != 'pull_request'
+      #   uses: docker/login-action@28218f9b04b4f3f62068d7b6ce6ca5b26e35336c
+      #   with:
+      #     registry: ${{ env.REGISTRY }}
+      #     username: ${{ github.actor }}
+      #     password: ${{ secrets.GITHUB_TOKEN }}
 
-      # Login against Docker Hub to allow running Docker Scout (except on PR)
+      # Login against Docker Hub to allow running Docker Scout
       # https://github.com/docker/login-action
       - name: Log into Docker Hub registry
         # if: github.event_name != 'pull_request'
@@ -77,12 +77,12 @@ jobs:
         id: meta
         uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
         with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          images: ${{ env.IMAGE_NAME }}
           tags: |
             type=ref,event=pr
             type=ref,event=branch,suffix=-${{github.run_number}}              
 
-      # Build and push Docker image with Buildx (don't push on PR)
+      # Build Docker image with Buildx (don't push)
       # https://github.com/docker/build-push-action
       - name: Build and push Docker image
         id: build-and-push
