--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -33,10 +33,13 @@ jobs:
       # This is used to complete the identity challenge
       # with sigstore/fulcio when running outside of PRs.
       id-token: write
+      pull-requests: write
+      security-events: write
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      # Docker Build and Push action will automatically clone the repository w/ correct ref
+      # - name: Checkout repository
+      #   uses: actions/checkout@v3
 
       # add problem matchers
       - name: Add Problem Matchers
