--- a/.github/workflows/docker-scout-scan.yml
+++ b/.github/workflows/docker-scout-scan.yml
@@ -142,8 +142,8 @@ jobs:
         uses: docker/scout-action@v1
         with:
           command: compare
-#          image: ${{ steps.meta.outputs.tags }}
-          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.ref_name }}-${{ env.COMPARE_TAG }}
+          image: ${{ steps.meta.outputs.tags }}
+          to: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.base_ref }}-${{ env.COMPARE_TAG }}
           ignore-unchanged: true
           only-severities: critical,high
           write-comment: true
