add needs: build to release job to make release job depend on build job

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -192,6 +192,7 @@ jobs:
   release:
     # only on pushes to the release branch
     name: Create Release
+    needs: build
     if: github.ref_name == 'release' && github.event_name == 'push'
     runs-on: ubuntu-22.04
     permissions: 
