--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -193,7 +193,7 @@ jobs:
     # only on pushes to the release branch
     name: Create Release
     needs: build
-    if: github.ref_name == 'release' && github.event_name == 'push'
+    if: ${{ (github.ref_name == 'development' || github.ref_name == 'release') && github.event_name == 'push' }}       
     runs-on: ubuntu-22.04
     permissions: 
       contents: write
