fix comment character

--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -227,4 +227,4 @@ jobs:
             } catch (error) {
               core.setFailed(error.message);
             }
-            # upload the zipped artifacts
+            // upload the zipped artifacts
