--- a/.github/workflows/cmake-multi-platform.yml
+++ b/.github/workflows/cmake-multi-platform.yml
@@ -198,6 +198,7 @@ jobs:
 
       - name: Create Release Variables
         run: |
+          ls -al ${{ github.workspace }}/artifacts
           export RELEASE_VERSION="${{vars.RELEASE_VERSION_PREFIX}}.${{github.run_number}}"
           echo "RELEASE_VERSION=$RELEASE_VERSION" >> $GITHUB_ENV                    
           export RELEASE_TAG="v${RELEASE_VERSION}"
@@ -212,7 +213,7 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
           script: |
             try {             
-              const response = await github.rest.repos.createRelease({
+              const createResponse = await github.rest.repos.createRelease({
                 draft: false,
                 generate_release_notes: true,
                 name: process.env.RELEASE_NAME,
@@ -221,10 +222,25 @@ jobs:
                 repo: context.repo.repo,
                 tag_name: process.env.RELEASE_TAG,
               });
-
-              core.exportVariable('RELEASE_ID', response.data.id);
-              core.exportVariable('RELEASE_UPLOAD_URL', response.data.upload_url);
+          
+              const oses = ["ubuntu-22.04, windows-2022, macos-12"];    
+              for (const os of oses) {
+                  const filename = 'artifacts-' + os + '.zip';
+                  const artifactPath = "artifacts/artifacts-" + os;
+                  const filePath = artifactPath +'/' + filename;
+                  const uploadResponse = await github.rest.repos.uploadReleaseAsset({
+                      owner: context.repo.owner,
+                      repo: context.repo.repo,
+                      release_id: createResponse.data.id,        
+                      label: os + " Binaries",
+                      name: filename,            
+                      data: require('fs').readFileSync(filePath),
+                      headers: {
+                      'content-type': 'application/zip',
+                      'content-length': require('fs').statSync(filePath).size
+                      }    
+                  });
+              }
             } catch (error) {
-              core.setFailed(error.message);
-            }
-            // upload the zipped artifacts
+                core.setFailed(error.message);
+            }               
